# GAINRL

./: LICENSE  README.md
.ipynb_checkpoints/: data_processor-checkpoint.py
angle_sorted_data/llama3_2_3b_Instruct/: processed_deepscaler.pt
angle_sorted_data/qwen2_5_05b_Instruct/: processed_amc.pt  processed_gsm8k.pt  processed_math.pt
angle_sorted_data/qwen2_5_math_1_5b_Instruct/: processed_deepscaler.pt
evaluation/: eval_aime.py  eval_amc.py  eval_minerva.py
evaluation/.ipynb_checkpoints/: eval_gsm8k-checkpoint.py  eval_math-checkpoint.py  eval_olympiad-checkpoint.py
trl_gainrl/: gainrl_trainer.py  pyproject.toml
trl_gainrl/trl/trainer/: grpo_config.py  grpo_trainer-ori.py  grpo_trainer.py
trl_gainrl/trl/trainer/.ipynb_checkpoints/: utils-checkpoint.py
trl_gainrl/trl/trainer/grpo/.ipynb_checkpoints/: grpo_trainer-gai-checkpoint.py  grpo_trainer-ori-checkpoint.py
trl_gainrl/trl/trainer/grpo_last/: grpo_trainer-develop.py  grpo_trainer-groundtruth.py  grpo_trainer-reuse-greedy.py  grpo_trainer-stdreuse.py
trl_gainrl/trl/trainer/grpo_last/.ipynb_checkpoints/: grpo_trainer-creat2-checkpoint.py  grpo_trainer-creattruth-checkpoint.py  grpo_trainer-reuse-sample-checkpoint.py  grpo_trainer-test1-checkpoint.py  grpo_trainer-成功-checkpoint.py
verl_gainrl/.ipynb_checkpoints/: run_gsm8k-checkpoint.sh  run_gsm8k-grpo-checkpoint.sh
verl_gainrl/data/amc/: test.parquet  train.parquet
verl_gainrl/data/gsm8k/: test.parquet  train.parquet
verl_gainrl/examples/gainrl_grpo/: run_Qwen2_5_Math_1_5b_Instruct .sh  run_Qwen2_5_Math_7b.sh
(+6 files in other folders)
