[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gainrl"
version = "0.1.0"
description = "gainrl version 0.1.0"
requires-python = ">=3.10"
license = {text = "MIT"}
readme = "README.md"

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]


dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "tqdm>=4.67",


  "torch>=2.5",             
  "torchaudio>=2.5",
  "torchvision>=0.20",
  "accelerate>=1.3",
  "bitsandbytes>=0.45",
  "deepspeed>=0.16",
  "transformers>=4.48",
  "tokenizers>=0.21",
  "safetensors>=0.5",
  "sentencepiece>=0.2",
  "huggingface-hub>=0.28",
  "datasets>=3.2",
  "einops>=0.8",
  "vllm>=0.7",
  "triton>=3.1",
  
  "fastapi>=0.115",
  "uvicorn[standard]>=0.34",
  "pydantic>=2.10",
  "anyio>=4.8",
  "aiohttp>=3.11",
  "requests>=2.32",
  
  "prometheus-client>=0.21",
]

[project.optional-dependencies]

dev = [
  "pytest>=8.3",
  "ipykernel>=6.29",
  "jupyter>=1.1",
  "black>=24.4",
  "ruff>=0.4",
]

docs = [
  "sphinx>=7.3",
  "furo>=2024.1",
  "myst-parser>=2.0",
]

monitor = [
  "prometheus-fastapi-instrumentator>=7.0",
  "sentry-sdk>=2.21",
  "wandb>=0.19",
]
